--- a/styles/pages/contact.css
+++ b/styles/pages/contact.css
@@ -1,3 +1,8 @@
+.section.fragment-container.full-bleed.two-columns.contact-main-page.form-container {
+  & .form-wrapper {
+    width: 100%;
+  }
+}
 .section.form-container.embed-container {
   display: flex;
   flex-direction: column;
